@@ -1,3 +1,9 @@
 =====================
    CHANGES: haddoc
 =====================
+
+- Added missing filter function (thanks to Jinwei Shen for
+  reporting the bug).
+
+- Initial release.
+
